# galleguimetro

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml
.clinerules/: 00-project-context.md  01-core.md  02-memory-bank.md  03-search-and-tools.md  04-git.md  05-self-improvement.md  06-docs.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8ed07ffdd394_initial_migration.py
bridge/: README.md  bridge_config.example.json  bridge_config.json  create_ggal_excel.py  create_sample_excel.py  dde_bridge.py  ggal_opciones.xlsx  inspect_excel.py  requirements.txt
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: TopBar.tsx  TradingViewChart.tsx
frontend/src/components/charts/: PayoffDiagramPanel.tsx
frontend/src/components/common/: ConnectionStatus.tsx  MetricCard.tsx  PriceCell.tsx
frontend/src/components/options/: OptionsChainPanel.tsx
frontend/src/components/portfolio/: PortfolioPanel.tsx
frontend/src/components/strategy/: StrategyBuilderPanel.tsx
frontend/src/layouts/: WorkstationLayout.tsx
frontend/src/pages/: AuthPage.tsx  Dashboard.tsx  OptionsPage.tsx  PortfolioPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: authSlice.ts  optionsSlice.ts  portfolioSlice.ts  store.ts
frontend/src/theme/: darkTheme.ts
frontend/src/types/: auth.ts  options.ts  portfolio.ts
frontend/src/utils/: payoffCalculator.ts
galleguimetro/: __init__.py  main.py
galleguimetro/config/: database.py  settings.py
galleguimetro/models/: database.py  schemas.py
galleguimetro/repositories/: alert_repo.py  option_repo.py  portfolio_repo.py  position_repo.py  strategy_repo.py
galleguimetro/routers/: alerts.py  auth.py  bridge.py  options.py  portfolios.py  strategies.py
galleguimetro/services/: auth.py  greeks_calculator.py  websocket_manager.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: setup-wsl2.sh
services/: dde_service.py  portfolio_service.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_portfolios_api.py
tests/unit/: test_schemas.py
