[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "galleguimetro"
version = "0.1.0"
description = "Sistema de análisis de opciones financieras en tiempo real"
authors = [
    { name = "Cline", email = "cline@workspace.ai" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "quantlib",
    "pandas",
    "numpy",
    "sqlalchemy",
    "psycopg2-binary",
    "requests",
    "python-dotenv",
    "win32com-client",
    "websockets",
    "pydantic",
    "pytest",
    "httpx"
]
requires-python = ">=3.8"